--- a/ios/marombalog/Info.plist
+++ b/ios/marombalog/Info.plist
@@ -2,6 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>InterTight-Bold.ttf</string>
+		<string>InterTight-SemiBold.ttf</string>
+		<string>InterTight-Medium.ttf</string>
+		<string>InterTight-Regular.ttf</string>
+		<string>Manrope-Bold.ttf</string>
+		<string>Manrope-Medium.ttf</string>
+		<string>Manrope-Regular.ttf</string>
+		<string>Manrope-SemiBold.ttf</string>
+	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
