--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.13.0",
     "react": "19.2.3",
     "react-native": "0.84.0",
     "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.23.0",
     "react-native-svg": "^15.15.3"
   },
   "devDependencies": {
